Bug 169318 - Extension Update dialog blocks UI without being properly modal on top of application window
Summary: Extension Update dialog blocks UI without being properly modal on top of appl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Extension-Manager
  Show dependency treegraph
 
Reported: 2025-11-07 12:58 UTC by Michael Weghorn
Modified: 2025-11-10 22:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screencast showing the issue with the gen VCL plugin on Linux (3.53 MB, video/x-matroska)
2025-11-07 12:58 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-11-07 12:58:16 UTC
Created attachment 203799 [details]
Screencast showing the issue with the gen VCL plugin on Linux

# Steps to reproduce:

1) start Writer
2) Open extension manager: "Tools" -> "Extensions"
3) install any extension
4) press "Check for Updates" button
-> the "Extension Update" dialog opens
5) click on the Writer document while the dialog is still open

# Actual result:

The "Extension Update" dialog disappears between the Writer window, but the Writer window cannot be interacted with, which is confusing.
The only way to "make it work" again is to manually switch back to the Extension Update Dialog and close that one.

# Expected result:

The Extension Update dialog should not disappear between the Writer window, but behave like a proper modal dialog, i.e. stay on top, indicating it needs to be closed before anything can be done in the Writer window.

# Further information

Screencast is attached
Reproducible at least with gtk3 and gen on Linux.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1d1e9af105dabddb14c2d04702754161a5d3fee7
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1d1e9af105dabddb14c2d04702754161a5d3fee7
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2025-11-07 12:58:54 UTC
I've started looking into this in the context of tdf#127201.
Comment 2 Commit Notification 2025-11-10 08:06:04 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5a6985c124c7a0ca246fbc920ab5e024d72a5e4a

tdf#169318 extension mgr: Deduplicate close logic

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-11-10 22:11:35 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/be04a19fa2b8357520e6d0297466e1909a3c3995

tdf#169318 tdf#127201 extension mgr: Open via new UNO command

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-11-10 22:11:39 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b2c72c4acdc2d9755f48f36540d647605a9579a2

tdf#169318 tdf#127201 extension mgr: Set dialog parent, make modal

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-11-10 22:11:43 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e6c1388c063183dce0270e178daab53a3079238

tdf#169318 extension mgr: Let DialogHelper subclass GenericDialogController

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-11-10 22:11:46 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ddf118a3a5d510bf078a8da08e656514c6c0a14f

tdf#169318 extension mgr: Don't do too much when setting dlg title

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-11-10 22:11:48 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cb6ee2b60f8c21d0464f5bcd9c158a85724aa80d

tdf#169318 extension mgr: Move pkg installation out of TheExtensionManager::get

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-11-10 22:11:51 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/530c6ccb42cc6a67efe648b6f16ea0c5ce03e14e

tdf#169318 extension mgr: Don't create dlg in installPackage()

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-11-10 22:11:53 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5cf880d64315f295c8d5fb2b99925c81affbedb1

tdf#169318 extension mgr: Pass parent to TheExtensionManager::createDialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-11-10 22:12:56 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/162e8e6fecb70a924ad5ca4a4b3c7111bcc3490c

tdf#169318 extension mgr: Close dialog on restart, too

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.